# routes/recipes.js
@@ -23,6 +23,32 @@ router.get("/:recipeId", async (req, res, next) => {
     next(error);
   }
 });
+
+router.get("/:recipeId/instructions", async (req, res, next) => {
+  try {
+    const instructions = await recipes_utils.getInstructions(req.params.recipeId);
+    res.send(instructions);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.get("/:recipeId/ingredients", async (req, res, next) => {
+  try {
+    const ingredients = await recipes_utils.getIngredientsAndAmountByID(req.params.recipeId);
+    res.send(ingredients);
+  } catch (error) {
+    next(error);
+  }
+});
+router.get("/:recipeId/servings", async (req, res, next) => {
+  try {
+    const servings = await recipes_utils.getServings(req.params.recipeId);
+    res.send(servings);
+  } catch (error) {
+    next(error);
+  }
+});
 //, req.body.cuisine, req.body.diet, req.body.intolerance
 router.post("/search", async (req, res, next) => {
   try {
