# routes/user.js
@@ -42,11 +42,10 @@ router.post('/favorites', async (req,res,next) => {
 router.get('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    let favorite_recipes = {};
     const recipes_id = await user_utils.getFavoriteRecipes(user_id);
     let recipes_id_array = [];
     recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    // ????? const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+    const results = await recipe_utils.getRecipeDetailsArr(recipes_id_array);
     res.status(200).send(results);
   } catch(error){
     next(error); 
@@ -60,8 +59,7 @@ router.post('/lastwatched', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipe_id = req.body.recipeId;
-    const watched_at = new Date();
-    await user_utils.markAsWatched(user_id,recipe_id,watched_at);
+    await user_utils.markAsWatched(user_id,recipe_id);
     res.status(200).send("The Recipe successfully saved as watched");
     } catch(error){
     next(error);
@@ -74,11 +72,10 @@ router.post('/lastwatched', async (req,res,next) => {
 router.get('/lastwatched', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    let watched_recipes = {};
     const recipes_id = await user_utils.getLastWatchedRecipes(user_id);
     let recipes_id_array = [];
     recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    // ???? const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+    const results = await recipe_utils.getRecipeDetailsArr(recipes_id_array);
     res.status(200).send(results);
   } catch(error){
     next(error); 
@@ -93,11 +90,21 @@ router.get('/myrecipes', async (req,res,next) => {
     const user_id = req.session.user_id;
     const recipes_id = await user_utils.getMyRecipes(user_id);
     let recipes_id_array = [];
-    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    // ???? const results = await recipe_utils.getRecipesPreview(recipes_id_array);
-    res.status(200).send(results);
+    // recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
+    // const results = await recipe_utils.getRecipeDetailsArr(recipes_id_array);
+    res.status(200).send(recipes_id);
   } catch(error){
     next(error); 
+  }
+});
+
+router.put("/updatelikes", async (req, res, next) => {
+  try {
+    const user_id = req.session.user_id;
+    await user_utils.updateRecipePopularity(user_id,req.body.recipeId,req.body.action);
+    res.status(200).send("Updated reciep's popularity.");
+  } catch (error) {
+    next(error);
   }
 });
 
@@ -106,18 +113,31 @@ router.get('/myrecipes', async (req,res,next) => {
  */
 router.post('/createrecipe', async (req,res,next) => {
   try{
+    const {
+      title,
+      image,
+      readyInMinutes,
+      vegeterian,
+      vegan,
+      gluten_free,
+      servings,
+      instructions,
+      ingridients
+    } = req.body;
     const user_id = req.session.user_id;
-    const title = req.body.title;
-    const image = req.body.image
-    const readyInMinutes = req.body.readyInMinutes;
-    const vegeterian = req.body.vegeterian;
-    const vegan = req.body.vegan;
-    const gluten_free = req.body.gluten_free;
-    const products_and_quantities = req.body.products_and_quantities;
-    const instructions = req.body.instructions;
-    const number_of_servings= req.body.number_of_servings;
 
-    await user_utils.createRecipe(user_id,title,image,readyInMinutes,vegeterian,vegan,gluten_free,products_and_quantities,instructions,number_of_servings);
+    await user_utils.createRecipe(
+      user_id,
+      title,
+      image,
+      readyInMinutes,
+      vegeterian,
+      vegan,
+      gluten_free,
+      ingridients,
+      instructions,
+      servings
+    );
     res.status(200).send("The Recipe successfully created");
     } catch(error){
     next(error);
