# routes/utils/user_utils.js
@@ -1,7 +1,10 @@
 const DButils = require("./DButils");
 
 async function markAsFavorite(user_id, recipe_id){
-    await DButils.execQuery(`insert into favorite_recipes values ('${user_id}',${recipe_id})`);
+  await DButils.execQuery(
+    `INSERT INTO favorite_recipes (user_id, recipe_id) VALUES ('${user_id}'
+    , '${recipe_id}')`
+  );  
 }
 
 async function getFavoriteRecipes(user_id){
@@ -9,10 +12,10 @@ async function getFavoriteRecipes(user_id){
     return recipes_id;
 }
 
-async function markAsWatched(user_id, recipe_id, watched_at){
+async function markAsWatched(user_id, recipe_id){
     await DButils.execQuery(
-        `INSERT INTO watched_recipes (user_id, recipe_id, watched_at) VALUES ('${user_id}'
-        , '${recipe_id}', '${watched_at}')`
+        `INSERT INTO watched_recipes (user_id, recipe_id) VALUES ('${user_id}'
+        , '${recipe_id}')`
       );   
 }
 
@@ -22,33 +25,31 @@ async function getLastWatchedRecipes(user_id){
 }
 
 async function getMyRecipes(user_id){
-    const recipes = await DButils.execQuery(`select * from created_recipes where user_id='${user_id}'`);
+    const recipes = await DButils.execQuery(`
+    select created_recipe_id AS id, title, image, readyInMinutes, vegeterian, vegan, gluten_free, ingridients, instructions, servings 
+    from created_recipes 
+    where user_id='${user_id}'`);
     return recipes;
 }
 
-async function createRecipe(user_id,title,image,readyInMinutes,vegetarian,vegan,gluten_free,products_and_quantities,instructions,number_of_servings){
-    const result = await DButils.execQuery(
-        `INSERT INTO created_recipes (user_id, title, image ,readyInMinutes, vegetarian, vegan, gluten_free, products_and_quantities, instructions, number_of_servings)
-         VALUES ('${user_id}', '${title}', '${image}','${readyInMinutes}', '${vegetarian}', '${vegan}', '${gluten_free}', '${products_and_quantities}', '${instructions}', '${number_of_servings}');
-         SELECT LAST_INSERT_ID() AS created_recipe_id;`
-      );
-    const created_recipe_id = result[1][0].created_recipe_id;      
+async function createRecipe(user_id,title,image,readyInMinutes,vegeterian,vegan,gluten_free,ingridients,instructions,servings){
+  const ingridientsJSON = JSON.stringify(ingridients);
+  const instructionsJSON = JSON.stringify(instructions);
     await DButils.execQuery(
-    `INSERT INTO recipes_popularity (recipe_id) VALUES ('${created_recipe_id}')`
-    );  
+        `INSERT INTO created_recipes (user_id, title, image ,readyInMinutes, vegeterian, vegan, gluten_free, ingridients, instructions, servings)
+         VALUES ('${user_id}', '${title}', '${image}','${readyInMinutes}', 
+         '${vegeterian}', '${vegan}', '${gluten_free}', 
+         '${ingridientsJSON}', '${instructionsJSON}', '${servings}');`
+      );
 }
 
-async function getRecipePopularity(recipe_id) {
-    const getQuery = `select popularity from recipes_popularity where recipe_id='${recipe_id}'`;
-    const popularity = await DButils.execQuery(updateQuery);
-    if (popularity.length === 0) {
-        // Recipe ID doesn't exist
-        return null;
-      }
-    return popularity;
-  }
+async function updateRecipePopularity(user_id,recipe_id, action) {
+   const currentQuery= await DButils.execQuery(`select popularity from recipes_popularity where recipe_id='${recipe_id}'`);
+   const current = currentQuery.length === 0 ? 0 : currentQuery[0].popularity;
+    if(action==1){
 
-async function updateRecipePopularity(recipe_id, popularity) {
+    }
+
     const updateQuery = `UPDATE recipes_popularity SET popularity = ${popularity} WHERE recipe_id = ${recipe_id}`;
     const updateResult = await DButils.execQuery(updateQuery);
     // if recipe id doesnt exist than insert
@@ -64,5 +65,4 @@ exports.markAsWatched = markAsWatched;
 exports.getLastWatchedRecipes = getLastWatchedRecipes;
 exports.getMyRecipes = getMyRecipes;
 exports.createRecipe = createRecipe;
-exports.getRecipePopularity = getRecipePopularity;
 exports.updateRecipePopularity = updateRecipePopularity;
